--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="last_location">Última localização</string>
     <string name="start_location_updates">Atualizar localização automáticamente</string>
     <string name="stop_location_updates">Interromper atualização de localização</string>
+    <string name="sem_permissao">Erro de permissão</string>
 </resources>
